# agentwatch

./: .gitignore  ARCHITECTURE.md  ATTRIBUTION.md  CLAUDE.md  CONTRIBUTING.md  LESSONS_LEARNED.md  Makefile  README.md  SPEC.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: mark_done.py  on_stop.py  pre_compact.py  session-start.sh
.github/ISSUE_TEMPLATE/: bug.md  false-positive.md  feature.md
.github/workflows/: ci.yml  gate-check.yml
agents/adversarial/: sysmon_sim.py
agents/agentic_tester/: __main__.py  mock_payloads.py  orchestrator.py
agents/harness/: runner.py  verifier.py
agents/synthetic/: orchestrator.py  run_all_scenarios.py
docs/: API.md  CONFIGURATION.md  FAILURE_LOG.md  FIREWALL.md  MAST.md  PRODUCTION_INTEGRATION.md  QUICKSTART.md  REAL_TRAFFIC_VALIDATION.md  SCENARIOS.md  SUCCESS_CRITERIA.md  TESTING.md  THREAT_MODEL.md
eval/: README.md  harness.py  overhead.py  sweep.py
eval/capture/: ebpf_bridge.py  llm_capture.py  proxy_addon.py  run.py
eval/corpus/: _build_traces_v0_1.py  captured_llm_v0.1.jsonl  captured_v0.1.jsonl  traces_v0.1.jsonl
eval/results/: captured_llm_test.json  overhead.json  (+2 more)
examples/: end_to_end.py  sample_output.json
paper/: EVAL_PLAN.md  Makefile  OUTLINE.md  PAPER1.md  SHARE.md  observability.tex
skills/: layer-01.md  layer-02.md  layer-03.md  layer-04.md  layer-05.md  layer-06.md  layer-07.md  layer-08.md  layer-09.md  layer-10.md  layer-11.md  layer-12.md  layer-13.md  layer-14.md  layer-15.md  layer-16.md
tests/: conftest.py
watchtower/: config.py  emitter.py  llm.py
(+103 files in other folders)
