[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchtower"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "redis[hiredis]>=5.0",
  "clickhouse-connect>=0.7",
  "asyncpg>=0.29",
  "neo4j>=5.20",
  "openai>=1.30",
  "langfuse>=2.0",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
]
# Real-traffic capture + LLM features (make capture-tier1[-llm], real verdict llm_judge):
# an egress proxy as the independent observer + an OpenAI-compatible LLM client.
capture = [
  "mitmproxy>=11",
  "httpx>=0.27",
  "openai>=1.30",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py", "gate_*.py", "scenario_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["watchtower"]
